using flexbox to align boards and el within boards

--- a/scss/partials/_card.scss
+++ b/scss/partials/_card.scss
@@ -1,5 +1,22 @@
 .board{
-  border-style: hidden;
-  color: white;
+  background-color: white;
+  height: 500px;
+  width: 400px;
+  padding: 10px;
+
+  .img{
+  }
+
+  .title{
+
+  }
+
+  .subtitle{
+
+  }
+
+  .text{
+
+  }
 
 }
