--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,16 @@
 .board {
-  border-style: hidden;
-  color: white; }
+  background-color: white;
+  height: 500px;
+  width: 400px;
+  padding: 10px; }
 
 body {
   background-image: url("/assets/bg.jpg"); }
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
 
 header {
   background-color: white;
@@ -11,4 +18,7 @@ header {
   background-repeat: no-repeat; }
 
 main {
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap; }
