--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,14 @@ body {
 
 }
 
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+
 header {
  background-color: white;
  background-image: url("/assets/header_bg.svg");
@@ -17,5 +25,9 @@ header {
 
 main {
  font-family: 'Lato', sans-serif;
+ display: flex;
+ align-content: center;
+ flex-wrap: wrap;
+
 
 }
