--- a/scss/partials/_card.scss
+++ b/scss/partials/_card.scss
@@ -1,8 +1,11 @@
 .board{
+  display: block;
+  margin: 1rem 0.5rem;
+  text-align: center;
   background-color: white;
-  height: 500px;
-  width: 400px;
-  padding: 10px;
+  height: 400px;
+  width: 325px;
+  padding: 25px;
 
   .img{
   }
