--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,10 @@
   background-color: white;
   height: 400px;
   width: 325px;
-  padding: 25px; }
+  padding: 25px;
+  font-size: 20px; }
+  .board .subtitle {
+    font-size: 1rem; }
 
 body {
   background-image: url("/assets/bg.jpg"); }
