--- a/scss/partials/_card.scss
+++ b/scss/partials/_card.scss
@@ -6,16 +6,16 @@
   height: 400px;
   width: 325px;
   padding: 25px;
+  font-size: 20px;
 
   .img{
   }
 
   .title{
-
   }
 
   .subtitle{
-
+    font-size: 1rem;
   }
 
   .text{
